--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <br>
                 <br>
                 <br>
-                <div class="masthead-heading text-uppercase">Glo Tech Repairs </div>
+                <div class="masthead-heading text-uppercase">Glo Tech Repair</div>
             </div>
         </header>
         <!-- Services-->
