update image sizes

--- a/index.html
+++ b/index.html
@@ -150,29 +150,9 @@
                 </div>
             </div>
         </section>
-        <!-- About -->
-        <section class="page-section" id="about">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">About</h2>
-                </div>
-                <div class="col-lg-12">
-                    <div class="team-member">
-                        <img class="rounded-circle" src="assets/img/team/gloGrad.png" alt="..." />
-                        <h4>Ringo Dau</h4>
-                        <p class="text-muted">Owner</p>
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted"> I graduated from the University of Minnesota with a Bachelor of Science in Information Technology Infrastructure (IT) in December 2019. I have always been interested in all technology like video games, computers, and cell phones. I started repairing things at an early age because my mom would ask me to fix random things around the house like the washing machine when it broke. Being able to learn, and successfully repair a washing machine as a teenager with no background experience gave me a sense of accomplishment and confidence to tackle anything that needed repair. As I got older, I started repairing my own phones and video game systems such as my ps3 and Xbox 360. Now I use these same skills I have learned to help others.</p></div>
-                </div>
-            </div>
-        </section>
+
         <!-- Videos & Reviews -->
-        <section class="page-section bg-light" id="team">
+        <section class="page-section" id="team">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Videos & Reviews</h2>
@@ -241,6 +221,29 @@
                 </div>
             </div>
         </section>
+
+        <!-- About -->
+        <section class="page-section bg-light" id="about">
+            <div class="container">
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase">About</h2>
+                </div>
+                <div class="col-lg-12">
+                    <div class="team-member">
+                        <img class="rounded-circle" src="assets/img/team/gloGrad1.png" alt="..." />
+                        <h4>Ringo Dau</h4>
+                        <p class="text-muted">Owner</p>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted"> I graduated from the University of Minnesota with a Bachelor of Science in Information Technology Infrastructure (IT) in December 2019. I have always been interested in all technology like video games, computers, and cell phones. I started repairing things at an early age because my mom would ask me to fix random things around the house like the washing machine when it broke. Being able to learn, and successfully repair a washing machine as a teenager with no background experience gave me a sense of accomplishment and confidence to tackle anything that needed repair. As I got older, I started repairing my own phones and video game systems such as my ps3 and Xbox 360. Now I use these same skills I have learned to help others.</p></div>
+                </div>
+            </div>
+        </section>
+
         <!-- Mission Statment -->
         <section class="page-section" id="mission">
             <div class="container">
